# artiklator

./: .gitignore  .style.yapf  README.md  pyproject.toml
.github/workflows/: pytest.yml  yapf-check.yml
artiklator/: __init__.py  _artiklator.py
tests/: test_artiklator.py
